# CPSC330-hw7

./: .gitignore  hw7.ipynb  pyproject.toml
