[project]
name = "cpsc330-hw7"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "mglearn>=0.2.0",
    "numpy>=2.4.3",
    "otter-grader>=6.1.6",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
]
